--- a/Utils/index.html
+++ b/Utils/index.html
@@ -28,6 +28,10 @@
 	<a href="https://outerovitch-maths.github.io/">↰</a><br>
 	├── <a href="././DNL/">DNL</a><br>
 	│   ├── <a href="././DNL/00.Key-Vocab.pdf">00.Key-Vocab.pdf</a><br>
+	│   ├── <a href="././DNL/01.Oral-Presentation.pdf">01.Oral-Presentation.pdf</a><br>
+	│   ├── <a href="././DNL/254046371900001_Convocation_avec_epreuves_V1_20260203-2.PDF">254046371900001_Convocation_avec_epreuves_V1_20260203-2.PDF</a><br>
+	│   ├── <a href="././DNL/%23Evaluation-01-Proportionnality.tex%23">#Evaluation-01-Proportionnality.tex#</a><br>
+	│   ├── <a href="././DNL/Exercise-01-Proportional-Situation.pdf">Exercise-01-Proportional-Situation.pdf</a><br>
 	│   └── <a href="././DNL/Lesson-Proportionality.pdf">Lesson-Proportionality.pdf</a><br>
 	├── <a href="././Fiche d%FFFFFFC3%FFFFFFA9claration Heures suppl%FFFFFFC3%FFFFFFA9mentaires .pdf">Fiche déclaration Heures supplémentaires .pdf</a><br>
 	├── <a href="././Grilles-multiplicatives-a-imprimer.pdf">Grilles-multiplicatives-a-imprimer.pdf</a><br>
