--- a/Utils/index.html
+++ b/Utils/index.html
@@ -31,7 +31,8 @@
 	│   ├── <a href="././DNL/01.Oral-Presentation.pdf">01.Oral-Presentation.pdf</a><br>
 	│   ├── <a href="././DNL/Convocation.pdf">Convocation.pdf</a><br>
 	│   ├── <a href="././DNL/Evaluation-01-Proportionnality.pdf">Evaluation-01-Proportionnality.pdf</a><br>
-	│   ├── <a href="././DNL/Exercise-01-Proportional-Situation.pdf">Exercise-01-Proportional-Situation.pdf</a><br>
+	│   ├── <a href="././DNL/Evaluation-Grid.pdf">Evaluation-Grid.pdf</a><br>
+	│   ├── <a href="././DNL/Exercises-Proportionality.pdf">Exercises-Proportionality.pdf</a><br>
 	│   └── <a href="././DNL/Lesson-Proportionality.pdf">Lesson-Proportionality.pdf</a><br>
 	├── <a href="././Fiche d%FFFFFFC3%FFFFFFA9claration Heures suppl%FFFFFFC3%FFFFFFA9mentaires .pdf">Fiche déclaration Heures supplémentaires .pdf</a><br>
 	├── <a href="././Grilles-multiplicatives-a-imprimer.pdf">Grilles-multiplicatives-a-imprimer.pdf</a><br>
