--- a/Utils/index.html
+++ b/Utils/index.html
@@ -33,7 +33,8 @@
 	│   ├── <a href="././DNL/Evaluation-01-Proportionnality.pdf">Evaluation-01-Proportionnality.pdf</a><br>
 	│   ├── <a href="././DNL/Evaluation-Grid.pdf">Evaluation-Grid.pdf</a><br>
 	│   ├── <a href="././DNL/Exercises-Proportionality.pdf">Exercises-Proportionality.pdf</a><br>
-	│   └── <a href="././DNL/Lesson-Proportionality.pdf">Lesson-Proportionality.pdf</a><br>
+	│   ├── <a href="././DNL/Lesson-Proportionality.pdf">Lesson-Proportionality.pdf</a><br>
+	│   └── <a href="././DNL/rapport_DNL_Colin_Outerovitch.pdf">rapport_DNL_Colin_Outerovitch.pdf</a><br>
 	├── <a href="././Fiche d%FFFFFFC3%FFFFFFA9claration Heures suppl%FFFFFFC3%FFFFFFA9mentaires .pdf">Fiche déclaration Heures supplémentaires .pdf</a><br>
 	├── <a href="././Grilles-multiplicatives-a-imprimer.pdf">Grilles-multiplicatives-a-imprimer.pdf</a><br>
 	├── <a href="././suivi corrections a3.pdf">suivi corrections a3.pdf</a><br>
